--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@ nav ul {
     justify-content: center;
     padding: 0;
     margin: 0;
+    display: grid;
 }
 
 nav ul li {
@@ -158,7 +159,7 @@ footer {
     nav ul {
         flex-direction: column;
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto  auto auto;
     }
 
     nav ul li {
@@ -188,7 +189,7 @@ footer {
 
     nav ul {
         flex-direction: column;
-        grid-template-columns: auto;
+        grid-template-columns: auto auto auto auto;
     }
 
     nav ul li {
