--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ nav ul {
     padding: 0;
     margin: 0;
     display: grid;
+    grid-template-columns: auto auto auto auto;
 }
 
 nav ul li {
@@ -190,7 +191,9 @@ footer {
     nav ul {
         flex-direction: column;
         grid-template-columns: auto auto auto auto;
-        gap: -10px;
+        width: 90%;
+        font-size: small;
+        margin-left: 3.5%;
     }
 
     nav ul li {
